--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           
         </p>
         <div class="button-box">
-          <a href="#"><button class="ios-button">Copy-edit</button></a>
+          <a href="#"><button class="ios-button">Copy-edit-add</button></a>
           <a href="#"><button class="mac-button">Revise</button></a>
         </div>
       </div>
