--- a/mdn.html
+++ b/mdn.html
@@ -23,7 +23,7 @@
     const header = document.querySelector('header');
     const section = document.querySelector('section');
 
-    let requestURL = '';
+    let requestURL = 'https://kgpeth.github.io/testingsheet/super.json';
     let request = new XMLHttpRequest();
     request.open('GET', requestURL);
     request.responseType = 'json';
